[package]
name = "agent_bench"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.41"
colored = "3.0.0"
dotenv = "0.15.0"
regex = "1.11.1"
reqwest = { version = "0.12.20", features = ["json", "native-tls"] }
rusqlite = "0.36.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.45.1", features = ["macros", "rt-multi-thread"] }
urlencoding = "2.1.3"
uuid = { version = "1.17.0", features = ["v4"] }
